; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_hb-backend.c_ghb_remove_job.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_hb-backend.c_ghb_remove_job.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@h_queue = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ghb_remove_job(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %5 = load i32, i32* @h_queue, align 4
  %6 = call i64 @hb_count(i32 %5)
  %7 = sub nsw i64 %6, 1
  store i64 %7, i64* %4, align 8
  br label %8

8:                                                ; preds = %25, %1
  %9 = load i32, i32* @h_queue, align 4
  %10 = load i64, i64* %4, align 8
  %11 = add nsw i64 %10, -1
  store i64 %11, i64* %4, align 8
  %12 = trunc i64 %10 to i32
  %13 = call %struct.TYPE_4__* @hb_job(i32 %9, i32 %12)
  store %struct.TYPE_4__* %13, %struct.TYPE_4__** %3, align 8
  %14 = icmp ne %struct.TYPE_4__* %13, null
  br i1 %14, label %15, label %26

15:                                               ; preds = %8
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* %2, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %25

21:                                               ; preds = %15
  %22 = load i32, i32* @h_queue, align 4
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %24 = call i32 @hb_rem(i32 %22, %struct.TYPE_4__* %23)
  br label %25

25:                                               ; preds = %21, %15
  br label %8

26:                                               ; preds = %8
  ret void
}

declare dso_local i64 @hb_count(i32) #1

declare dso_local %struct.TYPE_4__* @hb_job(i32, i32) #1

declare dso_local i32 @hb_rem(i32, %struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
